여러가지 선택자 학습

--- a/css/25-selector.css
+++ b/css/25-selector.css
@@ -5,9 +5,13 @@
   color: inherit;
 }
 
+/* 가상 요소 선택자 */
+::selection{
+  background: rgb(239, 119, 255);
+}
+
 /* 태그 선택자 */
 body {
-  margin: 0;
   font-family: "SUIT";
   font-weight: 300;
   background-color: cornflowerblue;
@@ -22,6 +26,10 @@ body {
   text-shadow: 4px 4px 3px #77f;
 }
 
+.align{
+  text-align: center;
+}
+
 ul.menu{
 	margin: 0;
 	padding-left: 0;
@@ -30,4 +38,39 @@ ul.menu{
 /* 아이디 선택자 */
 #demo {
   border: red 2px solid;
+}
+
+/* 속성 선택자 */
+.menu a[href$=".html"] {
+  background-color: yellowgreen;
+}
+
+/* 선택자 목록 */
+.fancy, .menu{
+  font-size: 25px;
+}
+
+/* 가상 요소 선택자 */
+.align::before{
+  content: "이전 요소";
+}
+
+.align::after{
+  content: "다음 요소";
+}
+
+/* 가상 클래스 */
+/* .menu li:nth-child(-n + 2), .menu li:nth-child(n + 6){
+  color: palevioletred;
+} */
+.menu li:nth-child(odd){
+  color: palevioletred;
+}
+
+.menu a:hover{
+  border: 2px solid blue;
+}
+
+h1.menu:hover, h1.menu:focus{
+  color: palevioletred;
 }
