--- a/css/26-inheritance-specificity.css
+++ b/css/26-inheritance-specificity.css
@@ -1,4 +1,22 @@
 body {
   font-family: "SUIT";
-  font-weight: 300;
+  font-weight: 700;
+}
+
+.menu{
+  color: thistle;
+  font-size: 36px;
+  border: 5px dashed green;
+}
+
+.menu li{
+  background-color: pink !important;
+}
+
+li.pick{
+  background-color: yellowgreen;
+}
+
+.menu a{
+  color: inherit;
 }
